# crypto_quant

./: .gitignore  CMakeLists.txt  config.json  requirements.txt
.cache/clangd/index/: crypto_quant.h.CC432C567C4881D4.idx  factory.cpp.132C017C69A2EE1D.idx  logger.cpp.0C4CA1363304203D.idx  main.cpp.A4DD32C5A4A2E3D0.idx  market_data.h.948F1753A5C97F24.idx  market_data_fetcher.cpp.C1269758975CE389.idx  market_data_fetcher.h.F1BA0DC3AFC2C1F8.idx  mean_reversion_strategy.cpp.B1BF7CBDE4BCC99F.idx  momentum_strategy.cpp.179B2E315D7000B3.idx  order_execution.h.27E50398E1E162D2.idx  order_executor.cpp.7CCB584E85E80590.idx  orderbook_manager.cpp.7E92AA539398F1CE.idx  orderbook_manager.h.0D69B6DFF6F19CC4.idx  python_bindings.cpp.889794A9C9B804E5.idx  rest_client.cpp.838E0455CAA03993.idx  rsi_strategy.cpp.47D9D6C38929863D.idx  strategy_engine.cpp.38788A4DF16C0349.idx  strategy_engine.h.63B9154B6C73D6C0.idx  websocket_client.cpp.1811ABDE41D01ED5.idx
include/: crypto_quant.h  execution.h  market_data.h  market_data_fetcher.h  order_execution.h  orderbook.h  orderbook_manager.h  strategy.h  strategy_engine.h  websocket_client.h
pybinding/: CMakeLists.txt  python_bindings.cpp
src/: CMakeLists.txt  factory.cpp  main.cpp
src/execution/: order_executor.cpp
src/market_data/: market_data.cpp  market_data_fetcher.cpp  rest_client.cpp  websocket_client.cpp
src/orderbook/: orderbook_manager.cpp
src/strategy/: mean_reversion_strategy.cpp  momentum_strategy.cpp  rsi_strategy.cpp  strategy_engine.cpp  strategy_engine_impl.cpp
src/utils/: logger.cpp  network_converter.cpp  network_utils.h
strategies/: __init__.py  config.py  lstm_strategy.py  main.py  mean_reversion_strategy.py  momentum_strategy.py  pair_strategy.py  spy_qqq.py  strategy_base.py
strategies/stochastic_process/: gbm_process.py  merton_jump_process.py  ou_process.py  poisson_process.py
